[package]
name = "nostr-inquiry"
version = "0.1.0"
edition = "2024"

[dependencies]
qdrant-client = "1.13.0"
nostr-sdk = "0.41"
tokio = { version = "1", features = ["full"] }
tracing-subscriber = "0.3"
pinecone-sdk = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[[bin]]
name = "stream-events"
path = "src/stream-events.rs"

[[bin]]
name = "store-notes"
path = "src/store-notes.rs"

[[bin]]
name = "pinecone-example"
path = "src/pinecone-example.rs"
